set max width on image to stop stretch

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,8 @@ li {
 img {
     flex: auto;
     margin-left: 200px;
+    max-width: 350px;
+
 }
 
 button {
